Remove extranneous bottom margins on label; fix Safari layout bug.
This margin causes a layout bug in Safari whereby the Inbox and Outbox
pages have a notice form textarea that's too wide, causing it to slide
beneath the "Send" button on those pages. Removing this margin seems to
be completely innocuous in my tests, which covered Safari, Firefox,
Opera, and Internet Explorer 7. Can less be more? :)

--- a/theme/base/css/display.css
+++ b/theme/base/css/display.css
@@ -443,7 +443,6 @@ padding:7px 7px 16px 7px;
 display:block;
 float:left;
 font-size:1.3em;
-margin-bottom:7px;
 }
 #form_notice #notice_submit label {
 display:none;
